# projektowanie-systemow-informatycznych

./: .pre-commit-config.yaml  README.md  build_push_deploy.bat  create_course_sequence.mermaid  docker-compose.yml  project2.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/common/: permissions.py  swagger_utils.py
backend/course/: admin.py  models.py  permissions.py  tests.py  views.py
backend/course/migrations/: 0001_initial.py  0002_courseprogress.py
backend/module/: admin.py  apps.py  aws.py  models.py  permissions.py  swaggered_views.py  views.py
backend/module/migrations/: 0001_initial.py  0002_moduleprogress.py  0003_module_photo_id.py  0004_alter_module_photo_id.py
backend/question/: admin.py  models.py  views.py
backend/question/migrations/: 0001_initial.py  0002_question_tags_alter_question_question_bank.py  0003_remove_question_question_bank.py  0004_multiplechoiceoption_correct_options_and_more.py  0005_alter_multiplechoiceoption_correct_options.py
backend/questionbank/: admin.py  apps.py  models.py  tests.py  views.py
backend/questionbank/migrations/: 0001_initial.py  0002_questionbank_questions.py
backend/questionresponse/: admin.py  apps.py  models.py
backend/questionresponse/migrations/: 0001_initial.py  0002_questionresponse_instructor_comment_and_more.py  0003_questionresponse_selected_options.py
backend/quiz/: admin.py  models.py  serializers.py  tests.py  views.py
backend/quiz/migrations/: 0001_initial.py  0002_quiz_module.py
backend/user/: models.py  views.py
(+47 files in other folders)
